# openid-whisperer

./: .env_TEST  .env_test  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: poetry-pytest-coverage.yml
certs/: ca_cert.pem  ca_key.pem  cert.pem
docs/: cookies.md  index.md  install.md
example_src/: README.md
example_src/certificate_utilities/: certificate_generator.py  inspect_server_cert_info.py
example_src/msal_flows/: acquire_token_on_behalf_of_example.py  common_config.json  common_config_https.json  confidential_client_certificate_sample.py  device_flow_sample.py  interactive_sample.py  migrate_rt.py  username_password_example.py
example_src/openid_examples/: __main__.py  mock_api_end_user.py  mock_api_service.py  mock_api_service_2.py  mock_api_service_a.py  mock_api_service_b.py  mock_openid_client_lib.py  mock_openid_service.py  mock_shared_config.py
example_src/openid_examples/templates/: authenticated_index.html  index.html  mock_api_index.html  mock_api_logout.html
examples/: README.md  certificate_generator.py  config.py  example_api_client.py  example_api_service.py  inspect_server_cert_info.py
examples/certificate_utils/: certificate_generator.py
examples/msal_samples/: device_flow_sample.py  interactive_sample.py  migrate_rt.py  username_password_example.py
examples/templates/: mock_api_index.html
sandbox/: inspect_server_cert_info.py  mock_api_client.py  mock_api_service.py
src/mock_api_service/: __main__.py  config.py  mock_api_client.py  mock_api_service.py  openid_client_lib.py
src/mock_api_service/templates/: mock_api_index.html
src/mocking_examples/: __main__.py  config.py  mock_api_client.py  mock_api_service.py  mock_openid_service.py
src/mocking_examples/templates/: mock_api_logout.html
src/openid_whisperer/: __main__.py  cert_utils.py  config.py  main.py  openid_api.py  openid_blueprint.py  openid_client_lib.py  openid_interface.py  openid_lib.py  openid_lib_types.py  openid_types.py
src/openid_whisperer/demo_certs/: key.pem
src/openid_whisperer/static/: style.css
src/openid_whisperer/templates/: authenticate.html  form_post_response.html  login.html
src/openid_whisperer/utils/: cert_utils.py  common.py  config_utils.py  credential_store.py  credential_store_utils.py  test_utils.py  token_store.py  token_store_utils.py  token_utils.py  user_info_ext.py
tests/: conftest.py  test_cert_utils.py  test_certificate_key_store.py  test_client_id_jwt_auth.py  test_code_challenge_methods.py  test_common_utils.py  test_config.py  test_credential_store.py  test_device_code_flow.py  test_on_behalf_of_flow.py  test_openid_api.py  test_openid_blueprint.py  test_openid_blueprint_500_errors.py  test_openid_blueprint_errors.py  test_openid_bluprint.py  test_openid_flows.py  test_openid_lib.py  test_token_refresh.py  test_token_store.py  test_tokens.py  test_url_functions.py  test_user_info_extensions.py
