[tool.poetry]
name = "openid-whisperer"
version = "0.1.1"
description = "OpenID Oauth 2.0 compatible Identity Provider"
license = "MIT"
authors = ["Robert Betts"]
readme = "README.md"
keywords = ["python", "mock", "api", "oauth2", "openid"]
classifiers = [
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
packages = [
    {include = "openid_whisperer", from = "src" },
    {include = "mocking_examples", from = "src" }
]

[tool.poetry.scripts]
openid-whisperer = 'openid_whisperer.main:main'
mock-openid-service = 'mocking_examples.mock_openid_service:main'
mock-api-service = 'mocking_examples:mock_api_service:main'
mock-api-client = 'mocking_examples.mock_api_client:main'


[tool.pytest]
env_files = [".env_test"]
testpaths = ["tests"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
#files = "src, tests"
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests",
    "src/mocking_examples"
]

[tool.pylint]
ignore-paths = "tests"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.6.0"
requests = {extras = ["security"], version = "^2.31.0"}
types-requests = "^2.31.0.1"
cryptography = "^41.0.1"
pyyaml = "^6.0"
flask = {extras = ["async"], version = "^2.2.3"}
python-dotenv = "^1.0.0"
Faker = "^18.13.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"
pytest = "^7.3.1"
certifi = "^2022.12.7"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-dotenv = "^0.5.2"
black = "^23.3.0"
msal = "1.22.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
